Z-index issue fixing + linking

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -525,7 +525,7 @@ Timeline CSS
 }
 
 .timeline>li .timeline-image {
-    z-index: 100;
+    z-index: 10;
     position: absolute;
     left: 0;
     width: 80px;
